--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
     
             <div class="other-options">
-                <a href="#"><h3>LISTA DE DESEJO</h3></a>
+                <a href="#"><h3>LISTA DE DESEJOS</h3></a>
                 <a href="#"><h3>FALE CONOSCO</h3></a>
                 <a href="#"><h3>TROCAS E DEVOLUÇÕES</h3></a>
             </div>
